cabal-version:       >=1.10
name:                restful
version:             0.1.0.0
license-file:        LICENSE
author:              Samuel Schlesinger
maintainer:          samuel@simspace.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     REST
  build-depends:       base >=4.14 && <4.15,
                       servant >=0.18 && <0.19,
                       servant-server >=0.18 && <0.19,
                       text >=1.2 && <1.3
  default-language:    Haskell2010
